[package]
name = "move-symexec"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "A symbolic executor for the Move language"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.33"
log = "0.4.11"
simplelog = "0.8.0"
structopt = "0.3.18"
tempfile = "3.1.0"

datatest-stable = { path = "../../../common/datatest-stable", version = "0.1.0" }
libra-workspace-hack = { path = "../../../common/workspace-hack", version = "0.1.0" }
move-core-types = { path = "../../move-core/types", version = "0.1.0" }
move-lang = { path = "../../move-lang", version = "0.0.1" }
move-vm-types = { path = "../../move-vm/types", version = "0.1.0" }
move-vm-runtime = { path = "../../move-vm/runtime", version = "0.1.0"}
vm = { path = "../../vm", version = "0.1.0" }
vm-genesis = { path = "../vm-genesis", version = "0.1.0" }

[[test]]
name = "run_tests"
harness = false
