[package]
name = "move-symexec"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "A symbolic executor for the Move language"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.33"
itertools = "0.9.0"
libc = "0.2.79"
log = "0.4.11"
once_cell = "1.4.1"
petgraph = "0.5.1"
regex = "1.3.9"
serde_json = "1.0.58"
shell-words = "1.0.0"
simplelog = "0.8.0"
structopt = "0.3.18"
tempfile = "3.1.0"

compiled-stdlib = { path = "../../stdlib/compiled", version = "0.1.0" }
bytecode = { path = "../../move-prover/bytecode", version = "0.1.0" }
bytecode-verifier = { path = "../../bytecode-verifier", version = "0.1.0" }
datatest-stable = { path = "../../../common/datatest-stable", version = "0.1.0" }
functional-tests = { path = "../../testing-infra/functional-tests", version = "0.1.0" }
language-e2e-tests = { path = "../../testing-infra/e2e-tests", version = "0.1.0" }
libra-types = { path = "../../../types" }
libra-vm = { path = "../../libra-vm", version = "0.1.0" }
libra-workspace-hack = { path = "../../../common/workspace-hack", version = "0.1.0" }
move-core-types = { path = "../../move-core/types", version = "0.1.0" }
move-lang = { path = "../../move-lang", version = "0.0.1" }
move-vm-types = { path = "../../move-vm/types", version = "0.1.0" }
move-vm-runtime = { path = "../../move-vm/runtime", version = "0.1.0", features = ["debug_module"] }
spec-lang = { path = "../../move-prover/spec-lang", version = "0.1.0" }
vm = { path = "../../vm", version = "0.1.0" }
vm-genesis = { path = "../vm-genesis", version = "0.1.0" }

[[test]]
name = "micro_tests"
harness = false

[[test]]
name = "move_functional_tests"
harness = false
