[package]
name = "move-symexec"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
publish = false
license = "Apache-2.0"
edition = "2018"

[dependencies]
# general
anyhow = "1.0.39"
log = "0.4.14"
once_cell = "1.7.2"
regex = "1.4.3"
simplelog = "0.9.0"
shell-words = "1.0.0"
structopt = "0.3.21"
tempfile = "3.2.0"

# move-specific
bcs = "0.1.2"
diem-workspace-hack = { path = "../../../common/workspace-hack" }
move-core-types = { path = "../../move-core/types" }
move-lang = { path = "../../move-lang" }
move-model = { path = "../../move-model" }
move-vm-runtime = { path = "../../move-vm/runtime", features = ["debug_module"] }
move-vm-types = { path = "../../move-vm/types" }
vm = { path = "../../vm" }

[dev-dependencies]
# general
goldenfile = "1.1.0"

# diem-specific
datatest-stable = { path = "../../../common/datatest-stable" }

[[test]]
name = "micro_tests"
harness = false

[[test]]
name = "cov"
test = false
harness = false
