[package]
name = "move-symexec-functional-tests"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Functional tests for the Move symbolic executor"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.33"
tempfile = "3.1.0"

datatest-stable = { path = "../../../../common/datatest-stable", version = "0.1.0" }
functional-tests = { path = "../../../testing-infra/functional-tests", version = "0.1.0" }
libra-types = { path = "../../../../types" }
libra-workspace-hack = { path = "../../../../common/workspace-hack", version = "0.1.0" }
move-lang = { path = "../../../move-lang", version = "0.0.1" }
move-symexec = { path = "..", version = "0.1.0" }
